Fix input overflow

--- a/app/frontend/src/stylesheets/modules/form/form-item.scss
+++ b/app/frontend/src/stylesheets/modules/form/form-item.scss
@@ -59,10 +59,10 @@
     display: grid;
     grid-template-areas: "icon field addon";
     grid-template-columns: min-content minmax(0, 1fr) min-content;
+    background-color: var(--gray-soft-lightest);
     border: 1px solid var(--gray-soft-dark);
     border-radius: var(--border-radius);
     transition: border-color ease-in-out 0.15s;
-    overflow: hidden;
 
     .icon,
     .addon {
@@ -76,15 +76,19 @@
     .icon {
       grid-area: icon;
       border-right: 1px solid var(--gray-soft-dark);
+      border-top-left-radius: var(--border-radius);
+      border-bottom-left-radius: var(--border-radius);
       & > * {
         max-width: 24px;
         max-height: 24px;
       }
     }
-
+    
     .addon {
       grid-area: addon;
       border-left: 1px solid var(--gray-soft-dark);
+      border-top-right-radius: var(--border-radius);
+      border-bottom-right-radius: var(--border-radius);
       &.is-btn {
         color: var(--gray-soft-lightest);
         background-color: var(--gray-hard-darkest);
@@ -99,7 +103,6 @@
       grid-area: field;
       border: none;
       border-radius: var(--border-radius);
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .08);
       padding: 0 0.8rem;
       color: var(--gray-hard-darkest);
       white-space: nowrap;
